# content-addressable — foundational content-addressing crate.
#
# IPLD-native by decision: CIDs and the dag-cbor codec come from the
# multiformats stack, not a homegrown implementation. See README.md.

# This repo is a Cargo workspace whose ONLY default member is the core crate
# at the repo root. The Python/PyO3 bindings live in `content-addressable-py`,
# a separate cdylib member that is NOT in `default-members`, so a plain
# `cargo build` / `cargo test` at the root touches only the core crate and
# never pulls in PyO3 / the `extension-module` linkage. The py crate is built
# by maturin (which targets its manifest explicitly).
[workspace]
members = ["content-addressable-py"]
default-members = ["."]

[package]
name = "content-addressable"
version = "0.1.0-alpha.1"
# FROZEN policy (gate item #10, issue #9): the edition stays at 2021 and the
# MSRV floor is `1.85` for the `0.1.x` line. 1.85 is the Rust 2024 edition
# baseline, required transitively because blake3 >= 1.6 pulls cpufeatures 0.3
# (an edition2024 crate). We declare it honestly rather than pin blake3 back, so
# downstream on 1.85+ builds cleanly with current deps. A dedicated CI job pins
# `dtolnay/rust-toolchain@1.85` so a future dependency can't raise the real floor
# silently. Bumping the edition or MSRV is an intentional, SemVer-relevant change.
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
description = "IPLD-native content addressing: data that carries its own proof of integrity, intrinsically (BLAKE3 + CIDv1 + canonical dag-cbor)."
repository = "https://github.com/hartsock/content-addressable"
keywords = ["content-addressing", "ipld", "cid", "merkle", "blake3"]
categories = ["cryptography", "data-structures", "encoding"]

[features]
# `merkle` gates the experimental content-addressed Merkle-DAG node helper
# (`src/merkle.rs`, `MerkleNode<T>`). Default-OFF: a plain `cargo build` /
# `cargo test` does NOT compile it, so no new symbols leak into the default
# surface. Its serialized bytes are NON-FROZEN until Merkle conformance vectors
# land (a follow-up toward 0.1.0-rc1) — see the module docs. CI and the pre-push
# hook exercise it via `--all-features`.
merkle = []

[dependencies]
# ipld-core re-exports the `cid` crate (as ipld_core::cid) which in turn
# re-exports `multihash` (as ipld_core::cid::multihash). Enabling the `serde`
# feature turns on `cid/serde`, which encodes a Cid as a dag-cbor tag-42 link.
ipld-core = { version = "0.4", features = ["serde"] }
# Canonical dag-cbor codec (strict map ordering, definite-length, tag-42 links).
serde_ipld_dagcbor = "0.6"
# BLAKE3 digest (multihash code 0x1e). The `^1` range stays open and resolves to
# the latest (1.8.x); blake3 >= 1.6 pulls cpufeatures 0.3 (edition2024), which is
# exactly why the declared MSRV is 1.85. The MSRV CI job (rust-toolchain@1.85) is
# the guard — if a future dependency raises the real floor past 1.85, that job
# goes red instead of the floor drifting silently.
blake3 = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
# NOTE: `serde` is intentionally NOT repeated here — the `[dependencies]` entry
# (with the `derive` feature) is already visible to tests, doctests, and the
# generator, so a dev-only copy was pure redundancy (issue #9 nit a).
# Test-only: parse the shared golden-vector file (tests/vectors.json) and drive
# the generator that (re)materializes it. NOT a core dependency — the published
# crate never pulls serde_json. See tests/vectors.rs and tests/gen_vectors.rs.
serde_json = "1"
